--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- 1. The youtube <iframe> (and video player) will replace this <div> tag. -->
-    <div id="player"></div>
+    <div id="player" />
     <ul id="playlist" />
   </body>
 </html>
